--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>Project 1</title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
 	</head>
