--- a/public/index.html
+++ b/public/index.html
@@ -1,80 +1,68 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.22.1/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.22.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.22.1/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.22.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.22.1/firebase-storage.js"></script>
-    <script defer src="/__/firebase/7.22.1/firebase-analytics.js"></script>
-    <script defer src="/__/firebase/7.22.1/firebase-remote-config.js"></script>
-    <script defer src="/__/firebase/7.22.1/firebase-performance.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+	<head>
+		<title>Project 1</title>
+		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
+	</head>
+	<body>
+		<div id = "startScreen">
+			<div class="jumbotron">
+				<h1 class="display-4">Welcome to Arrows: The Game</h1>
+				<p class="lead">This is a simple, yet challenging, game designed to test your reflexes.</p>
+				<hr class="my-4">
+				<ul class = "lead">
+					<li>Arrows will flash on the screen randomly</li>
+					<li>If it's a <span style = "color:blue;font-weight:bold">blue</span> arrow, use the arrow keys to indicate the direction of the arrow</li>
+					<div id = "bluearrows" style="margin-top:20px;">
+						<img src = "images/bluedownarrow.png" style = "width:5%;margin-right:50px;">
+						<img src = "images/blueuparrow.png" style = "width:5%;margin-right:50px;">
+						<img src = "images/bluerightarrow.png" style = "width:8%;margin-right:50px;">
+						<img src = "images/blueleftarrow.png" style = "width:8%;">
+					</div>
+					<li>If it's a <span style = "color:red;font-weight:bold">red</span> arrow, use the arrow keys to indicate the opposite of the direction the arrow</li>
+					<div id = "redarrows" style="margin-top:20px;">
+						<img src = "images/reddownarrow.png" style = "width:5%;margin-right:50px;">
+						<img src = "images/reduparrow.png" style = "width:5%;margin-right:50px;">
+						<img src = "images/redrightarrow.png" style = "width:8%;margin-right:50px;">
+						<img src = "images/redleftarrow.png" style = "width:8%;">
+					</div>
+					<li>Try to achieve the highest score possible in the given amount of time!</li>
+				</ul>
+				<a class="btn btn-dark btn-lg" id = "start" href="#" role="button">Single Player</a>
+				<a class="btn btn-dark btn-lg" id = "multiplayer" href="#" role="button">Multiplayer</a>
+			  </div>
+		</div>
+		<div id = "multiplayerLobby" class = "hidden">
+			<h1>Multiplayer Lobby</h1>
+			<button id = "backtostart">Go Back</button>
+		</div>
+		<div id = "game" class = "hidden">
+			<h1 class = "display-4" style="text-align:center;">Arrows</h1>
+			<br/>
+			<div style="display:block;margin:auto;width:60%;height:60%;border:1px solid #000;" id = "gameboard">
+			</div>
+			<div id="scoreboard" style="margin-top:-25%;margin-left:5%;font-size:2rem;">
+				<!--<p class = "lead">Score:</p>-->
+			</div>
+			<div id="clock" style="margin-top:10%;margin-left:5%;font-size:2rem;">
+			</div>
+		</div>
+		<div id = "end" class = "hidden">
+			<div class="card text-center">
+				<div class="card-header">
+				  Arrows
+				</div>
+				<div class="card-body">
+				  <h3 class="card-title">Game Over</h3>
+				  <div id = "gameover" class = "lead">
+				  </div>
+				  <a href="#" class="btn btn-dark" id = "playagain">Play Again</a>
+				</div>
+			  </div>
+		</div>
+	</body>
+	<script src="script.js"></script>
 </html>
