--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,8 @@
 		</div>
 		<div id = "multiplayerLobby" class = "hidden">
 			<h1>Multiplayer Lobby</h1>
-			<button id = "backtostart">Go Back</button>
+      <button id = "backtostart">Go Back</button>
+      <button id = "addLobby">New Lobby</button>
 		</div>
 		<div id = "game" class = "hidden">
 			<h1 class = "display-4" style="text-align:center;">Arrows</h1>
@@ -64,5 +65,6 @@
 			  </div>
 		</div>
 	</body>
-	<script src="script.js"></script>
+  <script src="script.js"></script>
+  <script src="lobbyfunctions.js"></script>
 </html>
