fixed weird null issue

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
 			<h1>Multiplayer Lobby</h1>
       		<button id = "backtostart">Go Back</button>
 		</div>
+		<div id = "lobbyScreen" class = "hidden">
+			
+		</div>
 		<div id = "end" class = "hidden">
 			<div class="card text-center">
 				<div class="card-header">
